# manifold

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SESSION_SUMMARY.md  manifold_whitepaper_v2.docx  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
docs/: CONCEPTS.md  MANIFEST_SCHEMA.md  WRITING_SPECS.md
docs/devlog/: SESSION_SPRITE_HARNESS.md
examples/hmmv/: end_to_end.py
examples/simple_example/: example.py  workflow.yaml
examples/sprite_generation/: README.md  example.py  manifest.yaml
examples/sprite_generation/harness/: __init__.py  agent.py  specs.py
experiments/: EXPERIMENTS_2026-02-17.md  README.md
experiments/data/consolidated/: exp1_dalle3_summary.json  exp1_dalle3_trials.jsonl  exp2_gptimage1_summary.json  exp2_gptimage1_trials.jsonl  exp3_extraction_summary.json  exp3_extraction_trials.jsonl  exp4_content_summary.json  exp4_content_trials.jsonl
experiments/data/revalidated/: exp1_dalle3_trials_universal.jsonl  exp2_gptimage1_trials_universal.jsonl  exp3_extraction_trials_universal.jsonl  exp4_content_trials_universal.jsonl
experiments/datasets/: content_topics.json  sprite_prompts.json  support_emails.json
experiments/exp1_dalle3/: README.md
experiments/exp1_dalle3/control/: baseline.py
experiments/exp1_dalle3/control_smart/: engineered.py
experiments/exp1_dalle3/manifold/: experiment.py  workflow.yaml
experiments/exp1_dalle3/results/: baseline_20260216_193149.json  baseline_20260216_193620.json  baseline_20260216_193651.json  baseline_20260217_111839.json  (+21 more)
experiments/scripts/: analyze.py  consolidate.py  universal_validator.py
experiments/shared/: validation_utils.py
manifold/: __init__.py
manifold/core/: __init__.py  agent.py  context.py  loop_detector.py  manifest.py  orchestrator.py  router.py  spec.py
manifold/harnesses/: __init__.py
manifold/testing/: __init__.py  convergence.py  correction.py  events.py  harness.py  models.py  stores.py
research/paper/: README.md  main.tex  neurips_2024.sty  references.bib
tests/: test_context.py  test_imports.py  test_loop_detector.py  test_manifest.py  test_orchestrator.py  test_router.py  test_spec.py
tests/testing/: test_convergence.py  test_correction.py  test_data_layer.py
(+58 files in other folders)
