[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manifold-ai"
version = "0.1.0"
description = "Contract-driven orchestration for multi-agent AI systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Fabio-Eric Rempel", email = "FabioRempel@proton.me"}
]
keywords = [
    "ai", "agents", "multi-agent", "orchestration", "workflow",
    "specs", "contracts", "loop-detection", "routing"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=26.3.1",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/fabs133/manifold"
Documentation = "https://github.com/fabs133/manifold#readme"
Repository = "https://github.com/fabs133/manifold.git"
Issues = "https://github.com/fabs133/manifold/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["manifold*"]
exclude = ["tests*", "docs*", "examples*", "experiments*"]

[tool.setuptools.package-data]
manifold = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
